--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <hr>
                 <div>
-                    <button id="love-button" onclick="document.location='login.html'">LOVE IT</button>
+                    <button id="login-button" onclick="document.location='login.html'">Go To Login Page</button>
                 </div>
             </div>
         </div>
