--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                 <hr>
                 <div>
                     <button id="login-button" onclick="document.location='login.html'">Go To Login Page</button>
+                    <button id="form-button" onclick="document.location='form.html'">Go To <i>"Form Input"</i> Page</button>
                 </div>
             </div>
         </div>
