--- a/login.html
+++ b/login.html
@@ -8,6 +8,14 @@
         <link rel="icon" type="image/x-icon" href="login/login1.svg">
     </head>
     <body>
+    <div class="container">
+        <div class="side-left">
+            <h2>Welcome !</h2>
+            <p class="details">
+                Hi! My name is <b>Misbachul Munir Al Haddad Alwi</b>. This page is one of my first project learning to be a <em>developer</em>. If you like what i made, you can contact me on <a id="instagram" href="https://www.instagram.com/me_moowi/">Instagram</a>. Do you love to read aswell? Take a look on my <a id="medium" href="https://medium.com/@MiMuuu">Medium</a> page. 
+            </p>
+        </div>
+        <div class="side-right">
         <form id="main-box" action="#" method="post">
             <h1>Login</h1>
             <div class="login-form">
@@ -17,7 +25,7 @@
                     id="username"
                     name="username"
                     type="text"
-                    placeholder="Enter your Username / Email / Phone Number"
+                    placeholder="Enter your Username/Email/Phone Number"
                     required
                 />
             </div>
@@ -56,5 +64,7 @@
                 </button>
             </div>
         </form>
+        </div>
+    </div>
     </body>
 </html>
