--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
         <div class="side-left">
             <h2>Welcome !</h2>
             <p class="details">
-                Hi! My name is <b>Misbachul Munir Al Haddad Alwi</b>. This page is one of my first project learning to be a <em>developer</em>. If you like what i made, you can contact me on <a id="instagram" href="https://www.instagram.com/me_moowi/">Instagram</a>. Do you love to read aswell? Take a look on my <a id="medium" href="https://medium.com/@MiMuuu">Medium</a> page. 
+                Hi! My name is <b>Misbachul Munir Al Haddad Alwi</b>. This page is one of my first project learning to be a <em>developer</em>. If you like what i made, you can contact me on <a id="instagram" href="https://www.instagram.com/me_moowi/" target="_blank">Instagram</a>. Do you love to read aswell? Take a look on my <a id="medium" href="https://medium.com/@MiMuuu" target="_blank">Medium</a> page. 
             </p>
         </div>
         <div class="side-right">
